# DTREX1

./: .gitignore  AUTHENTICATION.md  AUTH_SETUP.md  CLEANUP_TODO.md  CONFIGURATION_WORKFLOW.md  QUICKSTART.md  README.md  SSL_SETUP_GUIDE.md  WORKFLOW.md  WORKFLOW_DIAGRAMS.md  package-lock.json
.github/: copilot-instructions.md
.trunk/: trunk.yaml
backend/: Cargo.toml
backend/sql/: 00-recreate-db.sql  01-create-schema.sql  02-add-transactions.sql  03-add-admin-role.sql  init-db.sh
backend/src/: app_state.rs  error.rs  main.rs
backend/src/api/: auth.rs  chia.rs  contacts.rs  contracts.rs  files.rs  mod.rs  mw_auth.rs  node_rpc.rs  rpc.rs  signing.rs  ssl.rs  verify.rs  wallet_rpc.rs
backend/src/blockchain/: mod.rs  puzzles.rs  spend.rs
backend/src/ctx/: mod.rs  option_ctx.rs
backend/src/model/: contract.rs  file.rs  mod.rs  trade.rs  transaction.rs  user.rs
backend/src/rpc/: client.rs  mod.rs
backend/src/storage/: contacts.rs  files.rs  mod.rs
backend/src/store/: mod.rs
backend/src/util/: hashing.rs  mod.rs  pem_to_pkcs12.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: auth.ts  client.ts  insecure.ts
frontend/src/components/: ChiaNodeConnector.tsx  ChiaWalletStatusCard.tsx  CommitmentFlow.tsx  ConfigurationStatus.tsx  ContactManager.tsx  ContactQuickAdd.tsx  ContractEditor.tsx  ExchangeWalletConfig.tsx  FileUploader.tsx  InsecureModeWarning.tsx  Navbar.tsx  ParticipantInput.tsx  (+5 more)
puzzles/: README.md  contract.clsp  escrow.clsp  timelock.clsp
(+22 files in other folders)
