[package]
name = "chia-contract-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tower-cookies = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLVM and Chia
clvmr = "0.9"
chia-protocol = "0.9"
chia-bls = "0.9"

# Hashing and crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }

# Password hashing
argon2 = "0.5"
rand = "0.8"

# Token generation
hmac = "0.12"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
strum = "0.26"
strum_macros = "0.26"

# File handling
async-trait = "0.1"

[dev-dependencies]
